added notification helper

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">SampleApplication</string>
+    <string name="please_grant_notification_permission">Please grant notification permission</string>
 </resources>
